Matching game Add a max value (1866). Change secretId to the image id. Now background image is loaded using a XMLHttpRequest with a random id, make it a unique image. Finnaly fix the overflow of the rows. Apply a now palette for the UI.

--- a/WebProjectsCollection/wwwroot/css/MatchingCSS.css
+++ b/WebProjectsCollection/wwwroot/css/MatchingCSS.css
@@ -8,8 +8,8 @@ html {
 
 body {
 	height: 100%;
-	font-size: 24px;
-	font-family: 'Times New Roman';
+	font-size: 1.8rem;
+	font-family: 'helvetica';
 }
 
 .background {
@@ -17,7 +17,8 @@ body {
 	height: 100%;
 	display: flex;
 	justify-content: left;
-	background-color: #f4f1de;
+	background-color: #121212;
+	box-shadow: inset 0 0 10px rgb(0,0,0);
 }
 
 .center-tab {
@@ -36,8 +37,8 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 0;
-	background-color: #3d405b;
-	transition: all 1s;
+	background-color: rgb(6, 6, 6);
+	transition: all 1s ease-in;
 	z-index: 100;
 	-webkit-transition: all 1s ease-in;
 }
@@ -56,8 +57,9 @@ body {
 	width: fit-content;
 	align-items: center;
 	padding: 0.5rem;
-	border-right: 1px solid black;
-	background-color: #f2cc8f;
+	/*background-color: #f2cc8f;*/
+	background-color: #303F9F;
+	color: #FAFAFA;
 }
 
 .right-panel > div {
@@ -78,22 +80,27 @@ body {
 	height: 100%;
 	padding: 0.5rem;
 	display: flex;
-	justify-content: center;
+	flex-flow: row nowrap;
 	align-items: center;
+	gap: 0.5rem;
+}
+
+.rows::before, .rows::after {
+	content: '';
+	margin: auto;
 }
 
 .card-container {
 	width: 100%;
 	height: 100%;
-	min-width: 100px;
-	min-height: 100px;
-	max-width: 250px;
-	max-height: 250px;
+	min-width: 150px;
+	min-height: 150px;
+	max-width: 300px;
+	max-height: 300px;
 	transform-style: preserve-3d;
 	transition: transform 0.5s;
 	transform: rotate3d(0);
 	border-radius: 5px;
-	margin: 0 0.5rem;
 }
 
 .cards {
@@ -110,19 +117,21 @@ body {
 .card-cover {
 	width: 100%;
 	height: 100%;
-	background-color: #3d405b;
-	border-radius: 5px;
+	background-color: #303F9F;
+	border-radius: 4px;
 	position: absolute;
 	transform: translateZ(11px);
+	cursor: pointer;
 }
 
 .menu {
-	border: 1px solid black;
 	border-radius: 5px;
 	padding: 0.5rem;
 	width: fit-content;
 	height: fit-content;
-	background-color: #81b29a;
+	background-color: #303F9F;
+	color: #FAFAFA;
+	text-align: center;
 }
 
 .menu > * {
@@ -133,8 +142,19 @@ body {
 
 .start-btn {
 	margin-top: 1rem;
-	background-color: #f4f1de;
+	border: none;
 	border-radius: 5px;
+	background-color: #121212;
+	color: #FAFAFA;
+}
+
+input {
+	border: none;
+	text-align: center;
+}
+
+input:focus {
+	outline: none;
 }
 
 .error-message {
